[gd_scene load_steps=17 format=3 uid="uid://buk8kxwwtbnup"]

[ext_resource type="Texture2D" uid="uid://cudqalgc3uj1m" path="res://entities/items/bomb/Bomb.png" id="1_mnms8"]
[ext_resource type="Script" uid="uid://wb4v5lki7wm8" path="res://entities/items/bomb/bomb.gd" id="1_uuo1d"]
[ext_resource type="Texture2D" uid="uid://bnsadog362lsj" path="res://vfx/explosion/SpriteSheet.png" id="3_ofxjn"]
[ext_resource type="Script" uid="uid://86s0jw45glwo" path="res://shared/combat/hit_box.gd" id="4_w1g58"]
[ext_resource type="PackedScene" uid="uid://dynsrv1kyhmsd" path="res://vfx/shadow/shadow.tscn" id="5_o4rm2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w1g58"]
atlas = ExtResource("3_ofxjn")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4rm2"]
atlas = ExtResource("3_ofxjn")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr42l"]
atlas = ExtResource("3_ofxjn")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwex8"]
atlas = ExtResource("3_ofxjn")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3aeo"]
atlas = ExtResource("3_ofxjn")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwklq"]
atlas = ExtResource("3_ofxjn")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1qy3"]
atlas = ExtResource("3_ofxjn")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sad5c"]
atlas = ExtResource("3_ofxjn")
region = Rect2(320, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_j6w43"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1g58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4rm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr42l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3aeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwklq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1qy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sad5c")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uuo1d"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_rkway"]
radius = 17.0294

[node name="Bomb" type="Area2D"]
script = ExtResource("1_uuo1d")

[node name="Shadow" parent="." instance=ExtResource("5_o4rm2")]
position = Vector2(3.55271e-15, 6)
scale = Vector2(0.801666, 0.149524)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mnms8")

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_j6w43")
animation = &"explode"
frame_progress = 0.433048

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uuo1d")

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 136
collision_mask = 80
monitoring = false
monitorable = false
script = ExtResource("4_w1g58")

[node name="Shape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_rkway")
debug_color = Color(0.999519, 0, 0.110437, 0.42)
